@@ -107,6 +107,7 @@ Version CVS HEAD (?)
     the dialog and jumps directly to the respective instrument, region and
     dimension region the respective sample reference is located at.
   * Fixed instruments, samples and scripts to appear twice after save.
+  * Implemented reordering of instruments by drag & drop.
 
 Version 0.2.0 (2009-07-31)
 
